--- a/TODO.org
+++ b/TODO.org
@@ -1,8 +1,16 @@
 
 * Pending
 
-** TODO bc field from worndet-br? bc from the others?
 ** TODO cleanup the triple store before serialize it.
+
+IndexSense and WordSense must be merged.
+
+** DONE bc field from worndet-br? bc from the others?
+
+base concepts and core concepts are mapped to types. The number of
+base concepts in the XML files from Wordnet-BR do not have any special
+meaning.
+
 ** DONE Identify what to extract from index.XXXX files.
 
 No new information.
@@ -16,6 +24,6 @@ File process.lisp
 ** DONE parsing adj marks
 ** DONE adj and adv synsets (sattelities)
 
-Looks like the relations between synsets encode this data.
+It looks like the relations between synsets encode this information presented in the sense key.
 
 ** DONE lexnames
