--- a/README.org
+++ b/README.org
@@ -1,6 +1,16 @@
 
 * Pending
 
+** TODO type in wordnet-br a mismatch type s in WordNet-3
+
+Evidence word "gordo" (br a -> en s). ruim (br a -> en s). Solucao,
+arquivo com triplas sameAs entre synsets-a e synsets-s.
+
+** TODO sufixos "a" e "s" na WordNet-EN
+
+Para ser possível mapeamento com a SentiWordNet, fazer os sameAs como
+para a WordNet-BR.
+
 ** TODO Improve debug of the functions
 
 http://xach.livejournal.com/316925.html
@@ -8,10 +18,6 @@ http://xach.livejournal.com/316925.html
 ** TODO improves in the Wordnet-br
 
 leão, bunda, tabu, seminal, presente.
-
-** TODO type in wordnet-br a mismatch type s in WordNet-3
-
-Evidence word "gordo" (br a -> en s). ruim (br a -> en s)
 
 ** DONE remove lemma from wordsenses
 ** DONE cleanup the triple store before serialize it.
@@ -40,6 +46,7 @@ File process.lisp
 It looks like the relations between synsets encode this information presented in the sense key.
 
 ** DONE lexnames
+
 
 * Testing 
 
